# guild-zk

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  mydoc.sh
.cargo/: config.toml
.github/workflows/: build-wasm.yaml  general.yaml
agora-dkg/: Cargo.toml  README.md
agora-dkg/src/: encryption.rs  hash.rs  keypair.rs  lib.rs  share.rs  signature.rs
agora-dkg/src/node/: mod.rs  parameters.rs  shares_map.rs  test.rs
agora-interpolate/: Cargo.toml
agora-interpolate/benches/: interpolate.rs
agora-interpolate/src/: bls_curve.rs  bls_scalar.rs  k256_curve.rs  k256_scalar.rs  lib.rs  macros.rs  polynomial.rs
agora-threshold-sig/: Cargo.toml
agora-threshold-sig/src/: address.rs  encrypt.rs  encryption.rs  hash.rs  keypair.rs  lib.rs  node.rs  participant.rs  pvsh.rs  share.rs  shares.rs  tests.rs
agora-threshold-sig/src/node/: mod.rs  parameters.rs  phase.rs  shares_map.rs  test.rs  utils.rs
agora-zkp-backend/: .gitignore  Cargo.toml  docker-compose.yml
agora-zkp-backend/migrations/: 20220831110819_init.sql
agora-zkp-backend/src/: api.rs  app.rs  balancy.rs  config.rs  db.rs  eth.rs  lib.rs  main.rs  moralis.rs  signer.rs
agora-zkp-backend/tests/: balancy.rs  eth.rs
agora-zkp-ecdsa/: Cargo.toml
agora-zkp-ecdsa/benches/: point_mul.rs  scalar_ops.rs
agora-zkp-ecdsa/examples/: exp_proof.rs  generate_ring.rs  prover.rs  verifier.rs
agora-zkp-ecdsa/src/: curve.rs  lib.rs  parse.rs  pedersen.rs
agora-zkp-ecdsa/src/arithmetic/: field.rs  mod.rs  modular.rs  multimult.rs  scalar.rs
agora-zkp-ecdsa/src/arithmetic/point/: impl_macro.rs  mod.rs
agora-zkp-ecdsa/src/proofs/: equality.rs  exp.rs  membership.rs  mod.rs  multiplication.rs  point_add.rs  utils.rs
agora-zkp-ecdsa/src/proofs/exp/: aux.rs  mod.rs
agora-zkp-ecdsa/wasm-test/: index.ts
agora-zkp-interpolate/: Cargo.toml
agora-zkp-interpolate/src/: bls_scalar.rs  lib.rs
agora-zkp-triptych/: Cargo.toml  README.md
agora-zkp-triptych/src/: keypair.rs  lib.rs  ring.rs  signature.rs  utils.rs
agora-zkp-triptych/wasm-test/: index.ts  package.json
ci/: build-wasm.sh  rust-version.sh
curv/: Cargo.toml
curv/examples/: diffie_hellman_key_exchange.rs  pedersen_commitment.rs  proof_of_knowledge_of_dlog.rs  verifiable_secret_sharing.rs
curv/src/: test_utils.rs
curv/src/arithmetic/: errors.rs
curv/src/cryptographic_primitives/secret_sharing/: polynomial.rs
curv/src/elliptic/curves/: mod.rs  secp256_k1.rs
ecdsa-zkp/: Cargo.toml
ecdsa-zkp/src/: lib.rs
guild-zk-ecdsa/: Cargo.toml
guild-zk-ecdsa/src/: hash.rs  lib.rs  pedersen.rs
guild-zk-ecdsa/src/eval/: mod.rs  multimult.rs  pair.rs  relation.rs
guild-zk-ecdsa/src/proof/: addition.rs  equality.rs  mod.rs  multiplication.rs
guild-zk-triptych/: Cargo.toml
guild-zk-triptych/src/: ring.rs
merkle-tree-example/: Cargo.toml
merkle-tree-example/src/: common.rs  constraints.rs  lib.rs  pubkey.rs
prototypes/: Cargo.toml
prototypes/examples/: bellman.rs  dev_token_abi.json  ecdsa.rs  web3.rs
prototypes/src/: main.rs  ring_signature.rs  signer.rs  utils.rs  verifier.rs
tom256/: Cargo.toml
tom256/benches/: point_mul.rs  scalar_ops.rs
tom256/examples/: exp_proof.rs  generate_ring.rs  point_add_proof.rs  prover.rs  verifier.rs  zkattest.rs
tom256/js-curves/: big.ts  group.ts  index.ts  instances.ts  multimult.ts  package.json  tsconfig.json  weier.ts
tom256/scripts/: add.py  curve.py  exp.py  hello  params  test.py
tom256/src/: bigint.rs  curve.rs  field.rs  field_element.rs  hasher.rs  int_ops.rs  lib.rs  multimult.rs  parse.rs  pedersen.rs  point.rs  rng.rs  utils.rs
tom256/src/arithmetic/: affine_point.rs  field.rs  mod.rs  modular.rs  multimult.rs  point.rs  point_arithmetic.rs  scalar.rs
tom256/src/arithmetic/modular/: mod.rs  pointer_u32.rs  pointer_u64.rs
tom256/src/arithmetic/point/: impl_macro.rs  mod.rs
tom256/src/proofs/: equality.rs  exp.rs  membership.rs  mod.rs  multiplication.rs  point_add.rs  utils.rs
tom256/wasm-output/: test.rs
tom256/wasm-test/: index.ts  package.json  tsconfig.json
