[package]
name = "agora-interpolate"
version = "0.1.0"
edition = "2021"

[features]
k256-curve = ["k256"]
bls-curve = ["bls"]

[dependencies]
bls = { package = "bls12_381", version = "0.7.0", optional = true }
k256 = { version = "0.11", optional = true }
subtle = "2.4.1"
thiserror = "1.0"

[dev-dependencies]
bls = { package = "bls12_381", version = "0.7.0" }
k256 = { version = "0.11", features = ["arithmetic"] }
