[package]
name = "agora-interpolate"
version = "0.1.0"
edition = "2021"

[features]
k256-curve = ["k256"]
bls-curve = ["bls"]
zeroize-poly = ["zeroize"]

[dependencies]
bls = { package = "bls12_381", version = "0.7.0", optional = true }
k256 = { version = "0.11", optional = true }
subtle = "2.4.1"
thiserror = "1.0"
zeroize = { version = "1.5.7", features = ["zeroize_derive"], optional = true}

[dev-dependencies]
bls = { package = "bls12_381", version = "0.7.0" }
criterion = "0.3.5"
ff = { version = "0.12.0", default-features = false }
k256 = { version = "0.11", features = ["arithmetic"] }
rand_core = { version = "0.6.4", default-features = false }

[[bench]]
name = "interpolate"
path = "benches/interpolate.rs"
harness = false
required-features = ["bls-curve"]
