[package]
name = "agora-threshold-sig"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
agora-interpolate = { path = "../agora-interpolate", features = ["bls-curve", "zeroize-poly"] }
bls = { package = "bls12_381", version = "0.7.0", features = ["experimental", "zeroize"] }
chacha = { package = "chacha20poly1305", version = "0.10.0" }
ff = "0.12"
generic-array = "0.14"
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
sha3 = "0.9"
zeroize = "1.5.7"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs/header.html" ]
