[package]
name = "guild-zk-ecdsa"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = [
	"ark-ec/std",
	"ark-ff/std",
	"ark-serialize/std",
	"ark-std/std",
]

[dependencies]
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-secp256k1 = { version = "0.4.0", default-features = false }
ark-secq256k1 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
sha3 = { version = "0.10.6", default-features = false }

[dev-dependencies]
hex = "0.4.3"
