[package]
name = "prototypes"
version = "0.0.0-alpha"
edition = "2021"

[dependencies]
curve25519-dalek = "2"
ed25519-dalek = "1"
rand_core = {version = "0.5.0", features = ["getrandom", "std"]}
sha2 = "0.8.2"

[dev-dependencies]
ark-crypto-primitives = { version = "0.3.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.3.0", default_features = false }
ark-std = { version = "0.3.0", default-features = false }
bellman = "0.11.1"
bls12_381 = "0.6.0"
dotenv = "0.15.0"
env_logger = "0.6.1"
ff = "0.11.0"
hex-literal = "0.3.4"
rand = "0.8.5"
tokio = { version = "0.2", features = ["full"] }
web3 = { version = "0.15.0", default-features = false, features = ["http-tls"] }
