[package]
name = "tom256"
version = "0.0.0-alpha.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
bigint = { package = "crypto-bigint", git = "https://github.com/PopcornPaws/crypto-bigint", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
sha3 = "0.10.1"
subtle = "2.4.1"
wasm-bindgen = "0.2.80"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std"] }
rand_chacha = "0.3.1"
