[package]
name = "tom256"
version = "0.0.0-alpha.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bigint = { package = "crypto-bigint", git = "https://github.com/PopcornPaws/crypto-bigint", default-features = false }
borsh = "0.9"
num-bigint = { package = "num-bigint", version = "0.4.3", default-features = false }
num-integer = { version = "0.1", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"], default-features = false }
serdect = "0.1.0"
sha3 = "0.10.1"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }

[dev-dependencies]
criterion = "0.3.5"
rand = { version = "0.8.5", features = ["std"] }
serde_json = "1"
structopt = "0.3.26"

[[bench]]
name = "point_mul"
path = "benches/point_mul.rs"
harness = false

[[bench]]
name = "scalar_ops"
path = "benches/scalar_ops.rs"
harness = false
